--- a/gh-web-app/public/index.html
+++ b/gh-web-app/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SLafety Net</title>
+    <title>Samaritan</title>
   </head>
   <body>
     <noscript>
